<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_blur"
        tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/background"
            android:src="@drawable/background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="15dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/welcome_text"
            android:text="@string/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WelcomeText.Main"
            android:elevation="15dp"
            app:layout_constraintBottom_toTopOf="@+id/welcome_subtext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/welcome_subtext"
            android:text="@string/welcome_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WelcomeText.Addition"
            android:elevation="15dp"
            app:layout_constraintBottom_toTopOf="@+id/input_form" android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp">

        <EditText
                android:id="@+id/input_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                style="@style/InputText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:autofillHints=""/>

        <EditText
                android:id="@+id/input_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_form_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                style="@style/InputText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:autofillHints="" android:visibility="gone"/>

        <Button
                android:id="@+id/ok_button"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:background="@drawable/button_accept"
                android:text="@string/btn_accept_text"
                style="OKButton"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_ui_display_regular"
                android:layout_alignTop="@+id/input_form"
                android:layout_alignBottom="@+id/input_form"
                android:layout_alignEnd="@+id/input_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>